AC_INIT(accept_and_parse.c)
AC_CONFIG_HEADER(config.h)

AC_SET_MAKE

AC_MODULE_INIT()

AC_CHECK_LIB(bind, __inet_ntoa)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(network, socket)
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(net, __get_socket_descriptor)

AC_CHECK_HEADERS(poll.h sys/poll.h sys/socket.h netinet/in.h arpa/inet.h \
                 asm/unistd.h sys/uio.h sys/types.h winsock2.h ws2tcpip.h,,,[
/* Needed for <sys/socket.h> on FreeBSD 4.9. */
#include <sys/types.h>
])

if test "$ac_cv_header_winsock2_h" = "yes"; then :; else
  # Note: This header file interferes with winsock2.h.
  AC_CHECK_HEADERS(winsock.h)
fi

AC_CHECK_FUNCS(poll gmtime_r gmtime sendfile inet_ntoa inet_ntop)

AC_SUBST(RANLIB)

if test x"$pike_cv_sys_os" = xWindows_NT ; then
  # FIXME: These look suspiciouly much like 32bit versions.
  #        We probably want to use 64bit versions on IA64.
  LDFLAGS="-lws2_32  $LDFLAGS"
fi


AC_OUTPUT(Makefile,echo FOO >stamp-h )
