# $Id: configure.in,v 1.14 2001/03/02 13:52:14 grubba Exp $
AC_INIT(image.c)
AC_CONFIG_HEADER(image_machine.h)

AC_SET_MAKE

AC_CONFIG_SUBDIRS(encodings)

AC_MODULE_INIT()

AC_FUNC_MMAP

AC_CHECK_HEADERS(math.h sys/fcntl.h fcntl.h stdlib.h netinet/in.h winsock.h)

AC_CHECK_LIB(m, abs, [], [])

# Perform this test by hand since Sun cc fails otherwise.
AC_MSG_CHECKING([for fabs in -lm])
AC_CACHE_VAL(pike_cv_lib_m_fabs,
[
  OLDLIBS="$LIBS"
  LIBS="-lm $LIBS"
  AC_TRY_LINK(
  [
#ifdef HAVE_MATH_H
#include <math.h>
#else /* !HAVE_MATH_H */
    double fabs(double);
#endif /* HAVE_MATH_H */
  ],[
    double foo = fabs(1.0);
  ],[pike_cv_lib_m_fabs=yes],[pike_cv_lib_m_fabs=no])
  LIBS="$OLDLIBS"
])
if test "x$pike_cv_lib_m_fabs" = "xyes"; then
  AC_MSG_RESULT(yes)
  AC_DEFINE(HAVE_LIBM)
  LIBS="-lm $LIBS"
else
  AC_MSG_RESULT(no)
fi

if test x"$pike_cv_sys_os" = xWindows_NT ; then
  # FIXME: These look suspiciouly much like 32bit versions.
  #        We probably want to use 64bit versions on IA64.
  LDFLAGS="-lws2_32  $LDFLAGS"
fi


AC_SUBST(RANLIB)

AC_OUTPUT(Makefile,echo FOO >stamp-h )
