# $Id: configure.in,v 1.1 2004/05/13 08:57:07 grubba Exp $
#
# Support for Kerberos
#
# 2004-05-12 Henrik Grubbström
#
# FIXME: Currently only minimal support, and only for Kerberos 5 (not 4).

AC_INIT(kerberos.cmod)
AC_CONFIG_HEADER(config.h)
AC_ARG_WITH(krb5,     [  --with(out)-krb5       Support for Kerberos 5],[],[with_krb5=yes])

AC_MODULE_INIT()

PIKE_FEATURE_OK(Math.)

AC_C_CHAR_UNSIGNED

if test x$with_krb5 = xyes ; then
  dnl Checks for header files.

  PIKE_FEATURE(Kerberos,[no (krb5.h not found)])

  AC_CHECK_HEADERS(krb5.h)

  if test "$ac_cv_header_krb5_h" = "yes"; then
    dnl Checks for libraries.

    PIKE_FEATURE(Kerberos,[no (krb5 libraries not found)])

    AC_CHECK_LIB(krb5, krb5_init_context)

    if test "$ac_cv_lib_krb5_krb5_init_context" = "yes"; then
      PIKE_FEATURE(Kerberos,[yes])
    fi
  fi
fi

AC_OUTPUT(Makefile,echo FOO >stamp-h )
