# $Id: configure.in,v 1.2 2004/05/13 13:09:18 grubba Exp $
#
# Support for Kerberos
#
# 2004-05-12 Henrik Grubbström
#
# FIXME: Currently only minimal support, and only for Kerberos 5 (not 4).

AC_INIT(kerberos.cmod)
AC_CONFIG_HEADER(config.h)
AC_ARG_WITH(krb5,     [  --with(out)-krb5       Support for Kerberos 5],[],[with_krb5=yes])

AC_MODULE_INIT()

AC_C_CHAR_UNSIGNED

if test x$with_krb5 = xyes ; then
  dnl Checks for header files.

  AC_CHECK_HEADERS(krb5.h)

  if test "$ac_cv_header_krb5_h" = "yes"; then
    dnl Checks for libraries.

    AC_CHECK_LIB(krb5, krb5_init_context)
  fi
fi

AC_OUTPUT(Makefile,echo FOO >stamp-h )
